Apply "no" transformation to modal Fixes the slider hover flicker bug.

--- a/src/client/styles/components/_modal.scss
+++ b/src/client/styles/components/_modal.scss
@@ -20,6 +20,7 @@
   visibility: hidden;
 
    transition: opacity 200ms ease, visibility 200ms ease;
+   transform: rotate3d(0,0,0,0deg);
 }
 
 .modal--visible {
